--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Copyright (c) 2010 Friedrich Schöller <friedrich.schoeller@gmail.com>
+Copyright (c) 2010 Friedrich Schöller <code@schoeller.se>
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
